# RithmaticsOld

./: .gitignore  README.md  Rithmatics.csproj  Rithmatics.sln  export_presets.cfg  project.godot
.mono/assemblies/Debug/: api_hash_cache.cfg
.mono/assemblies/Release/: api_hash_cache.cfg
.mono/metadata/: ide_messaging_meta.txt  scripts_metadata.editor
Main/: DrawingSurface.cs  Main.gd  Main.tscn  Singleton.cs
Main/MainSurfaceScripts/: Area2D.cs  Background.gd  BoundsHitbox.gd  Label.gd  Surface.cs  Surface.tscn  WardingMat.tres
OldWork/CopeC++/: Arena.cpp  Color.cpp  Geometry.cpp  Globals.cpp  Gui.cpp  Gui.hpp  Line.hpp  Point.cpp  Point.hpp  StdMathFunc.tcc  main.cpp
OldWork/CopeGodot(Broken)/Copes Godot code/: Arena.tscn  Cope.gd  Line.gd  mainScene.tscn  project.godot
OldWork/CopeGodot(Broken)/Misc/: CMakeLists.txt  Credits.txt
OldWork/CopeGodot(Broken)/scenes/: Surface.tscn
OldWork/CopeGodot(Broken)/src/: Label.gd  SceneButton.gd
OldWork/CrypticMono/: project.godot
OldWork/CrypticMono/Main/: DrawingSurface.cs
OldWork/Godot 3.3 Version/: DrawingSurface.tscn  Invalid.gd
OldWork/Godot 3.3 Version/BaseLines/: Forbiddance.gd
OldWork/Godot 3.3 Version/DrawnLines/: DrawnForbiddance.gd  DrawnVigor.gd  DrawnWarding.gd
Rithmatics/: DrawingSurface.gd  Main.tscn  project.godot
Rithmatics/BaseLines/: Vigor.gd  Warding.gd
Rithmatics/LineHelpers/: LSRL.gd
Unused/Copes C++ code/: Arena.hpp  Color.hpp  Geometry.hpp  Globals.hpp  Line.cpp  Player.cpp  Player.hpp  StdMathFunc.cpp  StdMathFunc.hpp
Unused/Copes C++ code/dep/: nuklear_sdl_gl3.h
Unused/Copes Godot code/: Arena.gd  ChalkTexture-02-scaled.png.import  ChalkTexture-02-scalled.xcf  ChalkTexture-02.png.import  Geometry.gd  Main.gd  Player.gd  arc.gd  chalk-useMe.png.import  chalk.png.import
Unused/Crypticsprens code/: Area2D.cs  Background.gd  DrawingSurface.cs
Unused/Misc unused assets/: ChalkTexture-02-scaled.png.import  ChalkTexture-02.png.import  chalk-useMe.png.import  chalk.png.import
scenes/: Chalkling.tscn  LandingMenu.tscn
src/: Area2D.cs  Cope.gd  DrawingSurface.cs  Globals.gd  Main.gd
